# bodhi-game-engine

./: .gitignore  README.md  build.sh  meson.build  run_gjs.sh  run_lua.sh  run_python.sh  test.js  test.vala
examples/: assets.7z
examples/JS/: 01_init_and_input.js  02_file_operations.js  03_sound_and_music.js  test.js
examples/Lua/: 01_init_and_input.lua
examples/Python/: 01_init_and_input.py  02_file_operations.py  03_sound_and_music.py
examples/Vala/: 01_init_and_input.vala  02_file_operations.vala  03_sound_and_music.vala  test.vala
extras/: extras.readme  freeglut.pc  glut.pc  physfs.pc  physfs.pc.readme
src/: color.vala  constants.vala  engine.vala  meson.build  render_system.vala  scene_manager.vala  test.vala  window_system.vala
src/math/: math_util.vala  matrix4x4.vala  vector2.vala  vector3.vala  vector4.vala
src/resources/: audio_file.vala  file.vala  resource_manager.vala  surface.vala
src/system/: audio_buffer.vala  audio_file.vala  audio_listener.vala  audio_source.vala  audio_system.vala  engine.vala  file.vala  file_system.vala  input_system.vala  log_system.vala  render_system.vala  scene_manager.vala  subsystem.vala  window_system.vala
src/system/subsystem/: input_system.vala  log_system.vala  subsystem.vala
src/system/subsystem/audio_system/: audio_file.vala  audio_source.vala  audio_system.vala
src/system/subsystem/file_system/: file_system.vala
src/system/subsystem/rendering/: render_system.vala  scene_manager.vala  window_system.vala
vapi/: SDL2_image.vapi  alure.vapi  gl.vapi  glesv2.vapi  glew.vapi  glfw3.vapi  glu.vapi  glut.vapi  openal.vapi  physfs.vapi  sdl2.vapi  sndfile.vapi
