sources = files(
    'constants.vala',

    'color.vala',

    'math/vector2.vala',
    'math/vector3.vala',
    'math/vector4.vala',
    'math/matrix4x4.vala',

    'system/log_system.vala',
    'system/file_system.vala',
    'system/window_system.vala',
    'system/render_system.vala',
    'system/scene_manager.vala',
    'system/engine.vala',
    
    #'test.vala',
)
